Patch from Bastien Nocera <hadess@hadess.net>: Create an LCD Panel object of type sonypi, necessary for getting the     methods supported for panasonic notebooks. Fixes     https://bugs.freedesktop.org/show_bug.cgi?id=6729 Support the sonypi brightness type.